<resources>
    <string name="market_place">http://marketplace.my39shop.com/</string>
    <string name="jewel_commerce">http://jewelcommerce.my39shop.com/</string>
    <string name="review_url">http://reviews.my39shop.com/</string>
    <string name="api">api/v1/</string>
    <string name="store_preferences">store_pref</string>
    <string name="access_token">access_token</string>
    <string name="refresh_token">refresh_token</string>
    <string name="unauthorized">401</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="logged_out_error">Something went wrong. Please try again later.</string>
    <string name="product">product</string>
    <string name="cart">cart</string>
    <string name="order">order</string>
    <string name="cart_count">cart_count</string>
    <string name="old_cart">old_cart</string>
    <string name="old_password">CURRENT PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="addresses">Addresses</string>
    <string name="add_address">Add a new address</string>
    <string name="add_review">Write a review</string>
    <string name="add_billing_address">Add a billing address</string>
    <string name="change_password">Change Password</string>
    <string name="select_shipping">Select mode of shipping</string>
    <string name="my_account">My Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="featured_collection">FEATURED COLLECTION</string>
    <string name="testimonials">Testimonials</string>
    <string name="account">ACCOUNT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">LOGOUT</string>
    <string name="refresh">REFRESH</string>
    <string name="coupon_code">Have a gift card/coupon code?</string>
    <string name="availability">Check availability</string>
    <string name="pincode_hint">Pincode</string>
    <string name="check">Check</string>
    <string name="payment_status">PAYMENT STATUS</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="registered_email">YOUR REGISTERED EMAIL ID</string>
    <string name="password_reset">RESET MY PASSWORD</string>
    <string name="set_password">SET PASSWORD</string>
    <string name="edit">EDIT</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="taxes">TAXES</string>
    <string name="discount">DISCOUNT</string>
    <string name="gift_card">GIFT CARD</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="shipping">SHIPPING</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="download_pdf">Download As PDF</string>
    <string name="update_payment">Update payment</string>
    <string name="update">Update</string>
    <string name="ship_address">Shipping Address</string>
    <string name="save_address">Save Address</string>
    <string name="address">ADDRESS</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="save">SAVE</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="policies_and_TC">Policies and T&amp;Cs</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="subscription">Subscribe to marketing communication</string>
    <string name="same_billing_address">Use same for billing address</string>
    <string name="tax_info">*ALL APPLICABLE TAXES INCLUDED IN TOTAL AMOUNT*</string>
    <string name="set_password_description">Please set a new password for your account</string>
    <string name="forgot_password_description">Tell us your registered email address and we\'ll send you a password reset link in your inbox</string>
    <string name="check_inbox">Check your inbox!\n We\'ve sent a password reset link to</string>
    <string name="activation_link">Check your inbox!\n We\'ve sent an activation link to</string>
    <string name="ssl_cert_invalid">SSL certificate is invalid. Do you wish to proceed?</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_cart">ADD TO CART</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="quantity">QUANTITY</string>
    <string name="qty">QTY: </string>
    <string name="remove_cart">Remove</string>
    <string name="call_us_on">Call us on</string>
    <string name="email_us">Email us at</string>
    <string name="write_to_us">Write to us</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="available_reward_points">Available reward points =</string>
    <string name="reward_points">Reward points</string>
    <string name="reward_points_cap">REWARD POINTS</string>
    <string name="which_values">, which values =</string>
    <string name="redeem">REDEEM</string>
    <string name="apply">APPLY</string>
    <string name="remove">REMOVE</string>
    <string name="coupon_applied">Coupon applied</string>
    <string name="gift_card_applied">Gift card applied</string>
    <string name="by">By:</string>
    <string name="filter_by">Filter By</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="reset_all">RESET ALL</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="apply_filter">APPLY FILTER</string>
    <string name="recently_viewed_products">RECENTLY VIEWED PRODUCTS</string>
    <string name="description">DESCRIPTION</string>
    <string name="related_products">RELATED PRODUCTS</string>
    <string name="similar_products">SIMILAR PRODUCTS</string>
    <string name="checkout_as_guest">CHECKOUT AS GUEST</string>
    <string name="cart_header">CART</string>
    <string name="checkout">CHECKOUT</string>
    <string name="payment">PAYMENT</string>
    <string name="shop_for">SHOP FOR</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="product_search">Search for a product</string>
    <string name="filter_products">Filter products</string>
    <string name="sort_by">Sort:</string>
    <string name="products_found">PRODUCTS FOUND</string>
    <string name="or">OR</string>
    <string name="skip">SKIP</string>
    <string name="orders">ORDERS</string>
    <string name="amount">AMOUNT</string>
    <string name="title">TITLE</string>
    <string name="name">NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="mobile">MOBILE NO.</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="comment">Comment</string>
    <string name="address1">ADDRESS LINE 1</string>
    <string name="address2">ADDRESS LINE 2</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="country">COUNTRY</string>
    <string name="pin_code">PIN CODE</string>
    <string name="rating">RATING</string>
    <string name="status_shipped">SHIPPED</string>
    <string name="status_packed">PACKING</string>
    <string name="status_pending">PENDING</string>
    <string name="status_dispatch">READY TO DISPATCH</string>
    <string name="status_complete">COMPLETED</string>
    <string name="status_cancelled">CANCELLED</string>
    <string name="status_abandoned">ABANDONED CART</string>
    <string name="customization">CUSTOMIZATION</string>
    <string name="finish_customization">FINISH CUSTOMIZATION</string>
    <string name="customize_design">CUSTOMIZE THIS DESIGN</string>
    <string name="add_solitaire_form">ADD/CHANGE SOLITAIRE FORM</string>
    <string name="request_3d_model">REQUEST 3D MODEL</string>
    <string name="engrave_text">Engrave Text</string>
    <string name="engrave">Engrave</string>
    <string name="max_engrave">(Max 25 characters)</string>
    <string name="enter_engrave">Enter up to 25 characters</string>
    <string name="model_3d_2">Not sure how this unique jewellery would look on you?</string>
    <string name="model_3d_3">Can’t visualize the actual shape and size of this jewellery from product photos?</string>
    <string name="model_3d_4">TAKE ADVANTAGE OF OUR 3D PRINTING FEATURE AVAILABLE BELOW</string>
    <string name="diamond_shape">Diamond Shape</string>
    <string name="solitaire_color">Solitaire Color</string>
    <string name="solitaire_carat">Solitaire Carat</string>
    <string name="solitaire_clarity">Solitaire Clarity</string>
    <string name="estimate_budget">Estimate Budget</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="lifetime_exchange">Lifetime Exchange</string>
    <string name="return_30_days">30 Days Return</string>
    <string name="secure_shopping">Secure Shopping</string>
    <string name="expected_delivery">Expected delivery date:</string>
    <string name="size_guide">Size Guide</string>
    <string name="select_type">SELECT TYPE, SIZE AND QUANTITY</string>
    <string name="sku">SKU</string>
    <string name="approx_prod_weight">Approximate Product Weight</string>
    <string name="primary_stone">Primary Stone</string>
    <string name="secondary_stone">Secondary Stone</string>
    <string name="diamond_quality">Diamond Quality</string>
    <string name="total_diamonds">Total Diamond(s)</string>
    <string name="total_diamond_weight">Total Diamond Weight</string>
    <string name="diamond_color">Diamond Color</string>
    <string name="diamond_clarity">Diamond Clarity</string>
    <string name="metal_details_small">Metal Details</string>
    <string name="making_details_small">Making Details</string>
    <string name="stone_details">Stone Details</string>
    <string name="product_details_small">Product Details</string>
    <string name="setting_type">Setting Type</string>
    <string name="you_pay_only">You Pay Only</string>
    <string name="metal">Metal</string>
    <string name="size_small">Size</string>
    <string name="price">Price</string>
    <string name="weight_small">Weight</string>
    <string name="rate_per_gm">Per Gram Rate</string>
    <string name="gold_small">Gold</string>
    <string name="grand_total_small">Grand Total</string>
    <string name="shape">Shape</string>
    <string name="metal_grade">Metal Grade</string>
    <string name="gold">GOLD</string>
    <string name="diamond">DIAMOND</string>
    <string name="gemstone">GEMSTONE</string>
    <string name="making_charge">MAKING CHARGE</string>
    <string name="view_breakup">VIEW PRICE BREAKUP</string>
    <string name="hide_breakup">HIDE PRICE BREAKUP</string>
    <string name="virani_certified">100% Certified Jewellery</string>
    <string name="virani_guarantee">30 Days Money back Guarantee</string>
    <string name="other_sellers">Other Sellers</string>
    <string name="delivered_by">Delivered By</string>
    <string name="cod">Cash On Delivery</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="review_title">Ratings and Reviews</string>
    <string name="write_review">Write a review</string>
    <string name="first">&lt;&lt;-First</string>
    <string name="prev">&lt;-Prev</string>
    <string name="last">Last-&gt;&gt;</string>
    <string name="next">Next-&gt;</string>
</resources>