<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/WHITE"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.ecomnationmobile.library.Control.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_sellers"
                android:textSize="@dimen/abc_text_size_menu_material"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textColor="@color/PrimaryColorText"/>

            <Spinner
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:id="@+id/vendorName"
                android:layout_height="wrap_content"
                android:background="@drawable/border_translucent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <com.ecomnationmobile.library.Control.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:textSize="@dimen/text_size_13"
                android:layout_weight="1"
                android:textColor="@color/SecondaryColorText"/>

            <com.ecomnationmobile.library.Control.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/shipping"
                android:textSize="@dimen/text_size_13"
                android:layout_weight="1"
                android:textColor="@color/SecondaryColorText"/>

            <Button
                android:layout_width="wrap_content"
                android:text="@string/add_cart"
                android:padding="5dp"
                android:gravity="center"
                android:background="@drawable/simple_click"
                android:id="@+id/addToCart"
                android:textSize="@dimen/text_size_13"
                android:layout_height="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.ecomnationmobile.library.Control.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivered_by"
                    android:textStyle="bold"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textColor="@color/PrimaryColorText"/>

                <com.ecomnationmobile.library.Control.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Usually Delivered in 3 business day(s)."
                    android:textSize="@dimen/abc_text_size_caption_material"
                    android:textColor="@color/SecondaryColorText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.ecomnationmobile.library.Control.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cod"
                    android:textStyle="bold"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textColor="@color/PrimaryColorText"/>

                <com.ecomnationmobile.library.Control.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="May be available! Enter Pincode to confirm."
                    android:textSize="@dimen/abc_text_size_caption_material"
                    android:textColor="@color/SecondaryColorText"/>

            </LinearLayout>

        </LinearLayout>

        <com.ecomnationmobile.library.Control.MyTextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_caption_material"
            android:text="10 day Replacement Guarantee"
            android:textColor="@color/SecondaryColorText"/>

    </LinearLayout>
</FrameLayout>